# finance

./: .gitignore  Cargo.toml  LICENSE  QWEN.md
crates/finance-api/: Cargo.toml
crates/finance-api/src/: lib.rs  routers.rs
crates/finance-common/: Cargo.toml
crates/finance-common/src/: error.rs  lib.rs
crates/finance-config/: Cargo.toml
crates/finance-config/src/: lib.rs  log.rs  state.rs
crates/finance-config/src/application/: mod.rs  server.rs
crates/finance-entity/: Cargo.toml
crates/finance-macro/: Cargo.toml
crates/finance-service/: Cargo.toml
crates/finance-service/src/: lib.rs  util.rs
logs/: finance.log.2026-04-19-14
src/: main.rs
