[package]
name = "finance-api"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
finance-config.workspace = true
axum.workspace = true
finance-common.workspace = true
tower-http.workspace = true
finance-service.workspace = true

